[gd_scene load_steps=21 format=2]

[ext_resource path="res://addons/eh_jogos.shared_variables/demo_scene/colored_transparent_packed.png" type="Texture" id=1]
[ext_resource path="res://addons/eh_jogos.shared_variables/demo_scene/fonts/Kenney Mini.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/eh_jogos.shared_variables/demo_scene/elements/HeroPanel.gd" type="Script" id=3]
[ext_resource path="res://addons/eh_jogos.shared_variables/demo_scene/shared_variables/player_name.tres" type="Resource" id=4]
[ext_resource path="res://addons/eh_jogos.shared_variables/demo_scene/shared_variables/player_hp_max.tres" type="Resource" id=7]
[ext_resource path="res://addons/eh_jogos.shared_variables/demo_scene/shared_variables/player_hp_current.tres" type="Resource" id=8]
[ext_resource path="res://addons/eh_jogos.shared_variables/demo_scene/shared_variables/player_skin.tres" type="Resource" id=9]



[sub_resource type="DynamicFont" id=28]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 368, 128, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 288, 128, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 304, 128, 16, 16 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 368, 144, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 288, 144, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 304, 144, 16, 16 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 20 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 368, 112, 16, 16 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 288, 112, 16, 16 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 304, 112, 16, 16 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 24 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[node name="HeroPanel" type="VBoxContainer"]
margin_right = 160.0
margin_bottom = 217.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false,
"health_current": ExtResource( 8 ),
"health_max": ExtResource( 7 ),
"player_name": ExtResource( 4 ),
"player_skin": ExtResource( 9 )
}
_health_max = ExtResource( 7 )
_health_current = ExtResource( 8 )
_player_name = ExtResource( 4 )
_player_skin = ExtResource( 9 )

[node name="HeroName" type="Label" parent="."]
margin_right = 160.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 28 )
text = "Player"
align = 1

[node name="HeroContainer" type="Control" parent="."]
margin_top = 57.0
margin_right = 160.0
margin_bottom = 217.0
rect_min_size = Vector2( 160, 160 )
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YellowHero" type="AnimatedSprite" parent="HeroContainer"]
visible = false
scale = Vector2( 10, 10 )
frames = SubResource( 19 )
animation = "dead"
playing = true
centered = false

[node name="GreenHero" type="AnimatedSprite" parent="HeroContainer"]
visible = false
scale = Vector2( 10, 10 )
frames = SubResource( 23 )
animation = "dead"
playing = true
centered = false

[node name="BlueHero" type="AnimatedSprite" parent="HeroContainer"]
scale = Vector2( 10, 10 )
frames = SubResource( 27 )
animation = "dead"
playing = true
centered = false
